# cookiecutter-dsProject

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  requirements.txt  todo.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .database_env  .gitignore_project  EDA_{{cookiecutter.project_name}}.ipynb  Modelling_{{cookiecutter.project_name}}.ipynb  README.md  docker-composer.yml  pyproject.toml  util.py
{{cookiecutter.project_name}}/cfg/: cfg.json
{{cookiecutter.project_name}}/cmd/: exec-functions.sh  exec_all.sh  ingest.sh  ingest_data.py  predict.sh  predict_new_data.py  train.py
{{cookiecutter.project_name}}/documentation/: todo.md
{{cookiecutter.project_name}}/notebooks/: EDA_{{cookiecutter.project_name}}.ipynb  Modelling_{{cookiecutter.project_name}}.ipynb  ingest_{{cookiecutter.project_name}}.ipynb
{{cookiecutter.project_name}}/src/: exec.sh  feature_eng.py  logger.py  train.py  util.py  util_db.py
{{cookiecutter.project_name}}/util/: db.py  eda.py  io.py  logger.py
{{cookiecutter.project_name}}_{{cookiecutter.project_type}}/: README.md  pyproject.toml  requirements.txt  util.py
