[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.project_author}}",email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
{% if cookiecutter.project_type in ["ML_All", "ML_Scikit_Learn"] -%}
    "scikit-learn (>=1.6.1,<2.0.0)",
{% endif -%}
{% if cookiecutter.project_type in ["ML_All", "ML_Pytorch"] -%}
    "torch (>=2.6.0,<3.0.0)",
{% endif -%}
{% if cookiecutter.project_type in ["ML_All", "ML_Tensorflow"] -%}
    "tensorflow (>=2.18.0,<3.0.0)"
{% endif -%}
{% if cookiecutter.database == "PostgreSQL" -%}
    "dbt-postgres (>=1.9.0,<2.0.0)"
{% endif -%}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
{% if cookiecutter.use_jupyter == "Yes" -%}
jupyter = "^1.1.1"
{% endif -%}
seaborn = "^0.13.2"
matplotlib = "^3.10.0"