[project]
name = {{cookiecutter.project_name}}
version = "0.1.0"
description = "Repositório dedicado a criar formatos padronizados de projetos de Data Science"
readme = "README.md"
[project]
name = "teste"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
{% if cookiecutter.database == "PostgreSQL" -%}
    "dbt-postgres>=1.9.0",
{% endif -%}
{% if cookiecutter.use_jupyter == "Yes" -%}
    "jupyter>=1.1.1",
{% endif -%}
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
{% if cookiecutter.use_tests == "Yes" -%}
    "pytest>=8.3.5",
{% endif -%}
{% if cookiecutter.project_type == "ML_Scikit_Learn" -%}
    "scikit-learn>=1.6.1",
{% endif -%}
    "seaborn>=0.13.2",
{% if cookiecutter.database != "None" -%}
    "sqlalchemy>=2.0.39",
{% endif -%}
{% if cookiecutter.project_type == "ML_Tensorflow" -%}
    "tensorflow>=2.19.0",
{% endif -%}
{% if cookiecutter.project_type == "ML_Pytorch" -%}
    "torch>=2.6.0",
{% endif -%}
]
